# python_project_template

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.cursor/rules/01-standards/: 1-clean-code.mdc
.cursor/rules/02-programming-languages/: 2-python.mdc
.cursor/rules/05-workflows-and-processes/: 5-tdd.mdc
.cursor/rules/07-quality-assurance/: 7-testing-standards.mdc
