[project]
name = "python-project-template"
version = "0.0.0"
description = "Template repository for my Python projects."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
"Bug Tracker" = "https://github.com/cmnemoi/python_project_template/issues"
Changelog = "https://github.com/cmnemoi/python_project_template/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cmnemoi/python_project_template/"
Repository = "https://github.com/cmnemoi/python_project_template/"

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "python-semantic-release>=9.14.0",
]
lint = [
    "mypy>=1.13.0",
    "pytest-mypy>=0.10.3",
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_project_template"]
